# Data-Science-Projects

./: Covid19_classification.ipynb  README.md
ML-Apps/: README.md
ML-Apps/pandas-profiling-using-streamlit/: README.md  app.py  pyproject.toml  requirements.txt
Pytorch/: README.md
Tensorflow/: README.MD
small-projects/: README.md
