[tool.poetry]
name = "pandas-profiling-using-streamlit"
version = "0.1.0"
description = ""
authors = ["Paulo Lopez <paulo.lopez@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
streamlit = "^1.11.1"
pandas-profiling = "^2.9.0"
streamlit-pandas-profiling = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
